--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,67 @@ body {
 }
 
 header {
+  position: fixed;
   background-color: #1b1c1d;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
 }
 header h1 {
   color: #fff;
   padding: 30px;
   margin: 0;
+}
+
+.file-input {
+  display: none;
+}
+
+.buttons {
+  margin-left: auto;
+  padding-right: 30px;
+}
+
+.button {
+  border: 0;
+  background-color: #357e5f;
+  font-size: 16px;
+  font-family: Georgia;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 5px;
+  transition: 0.25s ease;
+  border-radius: 4px;
+}
+
+.button:hover {
+  background-color: #469b78;
+  cursor: pointer;
+}
+
+.container {
+  padding-top: 80px;
+}
+
+#capture {
+  width: 10000px;
+  height: 7000px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1000px);
+  grid-template-rows: repeat(10, 1000px);
+  width: 10000px;
+  height: 7000px;
+}
+
+.card {
+  padding: 40px;
+  font-size: 40px;
+}
+
+.card:nth-child(odd) {
+  background-color: #dce4ee;
 }
