--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,11 @@ header h1 {
 }
 
 .card {
-  padding: 40px;
+  padding: 80px;
   font-size: 40px;
   border: 30px solid transparent;
+}
+
+.card p {
+  margin: 0;
 }
